src/snapshots/qulacs_worker__tests__bell_measurement_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 2,
    array: [
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            192,
        ],
        [
            192,
        ],
        [
            192,
        ],
        [
            192,
        ],
        [
            0,
        ],
    ],
}
