src/snapshots/qulacs_worker__tests__chemistry_example_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 8,
    array: [
        [
            51,
        ],
        [
            195,
        ],
        [
            135,
        ],
        [
            195,
        ],
        [
            195,
        ],
        [
            120,
        ],
        [
            195,
        ],
        [
            102,
        ],
        [
            90,
        ],
        [
            195,
        ],
    ],
}
