src/snapshots/qulacs_worker__tests__phased_x_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 1,
    array: [
        [
            0,
        ],
        [
            0,
        ],
        [
            128,
        ],
        [
            128,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            128,
        ],
        [
            0,
        ],
        [
            0,
        ],
    ],
}
