src/snapshots/qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 2,
    array: [
        [
            128,
        ],
        [
            128,
        ],
        [
            128,
        ],
        [
            0,
        ],
        [
            64,
        ],
        [
            192,
        ],
        [
            128,
        ],
        [
            128,
        ],
        [
            192,
        ],
        [
            0,
        ],
    ],
}
